<resources>
    <string name="app_name">GiveNow</string>
    <string name="title_volunteer">Volunteer</string>
    <string name="title_donate">Donate</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="button_set_pickup_location_label">Set Pickup Location</string>
    <string name="submit_pickup_label">Submit Pickup Request</string>
    <string name="login_greeting">Login anonymously using your phone number</string>
    <string name="login_label">Log in Anonymously</string>
    <string name="confirm_pickup">Are you sure you want to pick up this donation?</string>
    <string name="claim">Claim</string>
    <string name="cancel">Cancel</string>
    <string name="donation_history">Donation History</string>
    <string name="pickup_history">Pickup History</string>
    <string name="volunteer_dialog_disclaimer">Your name and phone number will only be used for verification.</string>
    <string name="anonymous">Anonymous</string>
    <string name="address">Anonymous Address</string>
    <string name="pickupRequest_retryDialog_message">Please check your internet connection and try again.</string>
    <string name="pickupRequest_retryDialog_title">Request Failed</string>
    <string name="pickupRequest_retryDialog_retryLabel">Retry</string>
    <string name="pickupRequest_submittedDialog_title">Pickup Request Submitted!</string>
    <string name="pickupRequest_submittedDialog_message">You\'ll be notified when a volunteer is ready to pick up your donation!</string>
    <string name="acceptRequest_submittedDialog_title">You\'ve accepted a pickup!</string>
    <string name="acceptRequest_submittedDialog_msg">You\'ll be notified when the donation is ready to be picked up.</string>
    <string name="action_cancel">Cancel</string>
    <string name="addrHdr">Address</string>
    <string name="itypeHdr">Type</string>
    <string name="dateHdr">Pickup Date</string>
    <string name="action_refresh">Refresh</string>
    <string name="donate_pickup_complete">Your donation has been successfully picked up.  Thanks for making a difference!</string>
    <string name="donate_success">Donation Successful</string>
    <string name="notif_pickup_request_claimed_title">Is your donation ready?</string>
    <string name="notif_pickup_request_claimed_msg">%1$s wants to pick up your donation. Confirm?</string>
    <string name="notif_volunteer_confirmed_title">Ready for Pickup</string>
    <string name="notif_volunteer_confirmed_msg">%1$s\'s donation at %2$s is ready to be picked up.</string>
    <string name="notif_volunteer_confirmed_msg_no_name">The donation at %1$s is ready to be picked up.</string>
    <string name="notif_pickup_complete_title">Donation Picked Up</string>
    <string name="notif_pickup_complete_msg">%1$s just picked up your donation. Thanks!</string>
    <string name="notif_problem_reported_title">Problem Reported</string>
    <string name="notif_problem_reported_msg">%1$s reported a problem picking up your donation.</string>
    <string name="navigate">Navigate</string>
    <string name="call_donor">Call</string>
    <string name="report_problem">Report problem</string>
    <string name="finish_pickup">I picked up this donation</string>
    <string name="report_problem_cancel">Never mind</string>
    <string name="report_problem_reason_cant_find_place">I can\'t find the place</string>
    <string name="report_problem_reason_cant_find_coats">I found the place, but I can\'t find the coats</string>
    <string name="report_problem_reason_other">Other: </string>
    <string name="navigation_item_1">Give Now</string>
    <string name="navigation_item_2">Volunteer</string>
    <string name="navigation_item_3">Dropoff Centers</string>
    <string name="navigation_your_profile">Your Profile</string>
    <string name="continue_label">Continue</string>
    <string name="button_confirm_donation_label">Give Now</string>
    <string name="error_insufficient_categories_selected">Please select one or more.</string>
    <string name="dialog_phoneNumber_title">How can we contact you?</string>
    <string name="dialog_phoneNumber_hint">+1 234 456 7890</string>
    <string name="anonymous_user_name">Anonymous</string>
    <string name="request_pickup_info_confirm_address">Is your address correct?</string>
    <string name="request_pickup_info_select_categories">What are you donating?</string>
    <string name="your_donation_label">Your Donation</string>
    <string name="request_status_waiting">Waiting for a volunteer to accept your request!</string>
    <string name="error_donation_not_canceled">Couldn\'t connect - please try again later.</string>
    <string name="error_note_not_saved">Couldn\'t connect - please try again later.</string>
    <string name="error_connection_failure_title">Couldn\'t connect</string>
    <string name="error_connection_failure_message">Please try again later!</string>
    <string name="cancel_donation_button">Cancel</string>
    <string name="dialog_cancelDonation_message">Cancel your donation?</string>
    <string name="dialog_cancelDonation_positiveButton">Cancel donation</string>
    <string name="dialog_cancelDonation_negativeButton">Keep donation</string>
    <string name="request_pickup_choose_location">Where is your donation located?</string>
    <string name="action_contextual_help">Help</string>
    <string name="help_request_pickup_initial">Move the map to select a pickup location for your donation. Our drivers will pick up your items from this spot, so try to be as precise as possible!</string>
    <string name="help_request_pickup_confirm_address">Confirm your address is correct and that the pin is in the right place. Tap \"Add a note\" to give your driver additional information (for example, \"second floor\" or \"gate code: 3311\"). </string>
    <string name="help_request_pickup_category_chooser">These are currently the most needed items in your area. Choose one or more by tapping the cards. If you\'re donating items that are not listed, choose \"other\".</string>
    <string name="help_request_pickup_current_request">Your request has been received! You\'ll be notified when a driver is ready to pick up your donation.</string>
    <string name="help_title">Help</string>
    <string name="get_directions">Navigate</string>
    <string name="onboarding_1_title">Welcome to GiveNow.</string>
    <string name="onboarding_1_description">GiveNow lets you donate from anywhere.</string>
    <string name="onboarding_2_title">We show you what\'s needed most in your area.</string>
    <string name="onboarding_2_description">You select what you want to donate.</string>
    <string name="onboarding_3_title">Tell us where to pick it up.</string>
    <string name="onboarding_3_description">Simply pinpoint a spot on the map. You can even add special instructions like apartment numbers or gate codes.</string>
    <string name="onboarding_4_title">We take care of the rest.</string>
    <string name="onboarding_4_description">A trusted volunteer driver will pick up your donation.\nWe\'ll contact you to coordinate the pickup.</string>
    <string name="phone_number_verification_title">Add a phone number</string>
    <string name="phone_number_verification_error_number_invalid">Please enter a valid phone number.\nExample: +49 123 456 7890</string>
    <string name="phone_number_verification_error_number_failed_to_parse">Please enter a phone number in the format:\n+49 123 456 7890</string>
    <string name="phone_number_verification_error_no_country_code">Please include the country code.\nExample: +49 123 456 7890</string>
    <string name="phone_number_disclaimer">This only lets your driver reach you to arrange pickup. We never share your number with third parties.</string>
    <string name="address_field_note_hint">Apartment, gate code, name…</string>
    <string name="phone_number_later">You can also add a phone number later.</string>
    <string name="dialog_phoneNumber_negativeButton">Cancel</string>
    <string name="dialog_phoneNumber_positiveButton">Submit</string>
    <string name="onboarding_or">or</string>
    <string name="onboarding_add_phone_number_later_button">Add a phone number later</string>
    <string name="dialog_sms_code_hint">SMS Code</string>
    <string name="validate_sms_code">We sent a 4-digit SMS code to:\n %1$s.\nEnter it in below.</string>
    <string name="sms_body_javascript">{code} is your code for GiveNow.</string>
    <string name="push_notif_volunteer_default_name">A volunteer</string>
    <string name="push_notif_volunteer_is_ready_to_pickup">" is ready to pick up your donation!"</string>
    <string name="dialog_accept_pending_volunteer">Is your donation available for pickup today?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="donor_default_name">Anonymous</string>
    <string name="volunteer_dashboard_status_waiting">Waiting for Donor</string>
    <string name="volunteer_dashboard_status_ready">Ready for Pickup</string>
    <string name="dialog_loggedin_existing_donation_found_title">Existing donation found!</string>
    <string name="dialog_loggedin_existing_donation_found_message">Your existing donation request will be loaded instead.</string>
    <string name="dialog_loggedin_existing_donation_found_button">OK</string>
    <string name="dialog_phoneNumber_for_volunteer">We\'ll contact you at this number with details about volunteering.\nDon\'t worry, we won\'t share it with anyone!</string>
    <string name="volunteer_label_user_has_applied">Thanks for applying to volunteer!\nWe\'ll contact you soon at %1$s</string>
    <string name="volunteer_button_user_has_applied">You applied to volunteer</string>
    <string name="volunteer_button_user_has_not_applied">I want to volunteer!</string>
    <string name="volunteer_label_user_has_not_applied">Want to volunteer to pickup donations?\nThe only thing you need is a car and some spare time!</string>
    <string name="volunteer_accept_request_marker_cta">Tap here to accept this request!</string>
    <string name="request_status_volunteer_pending">A volunteer is ready to pick up your donation!</string>
    <string name="request_status_volunteer_confirmed">Your volunteer will contact you soon at %1$s!</string>
    <string name="dialog_volunteer_claim_pickuprequest_title">Claim this Pickup Request?</string>
    <string name="dialog_volunteer_claim_pickuprequest_message">This will notify the donor that you\'d like to pick their donation up.</string>
    <string name="dashboard_status_ready">Ready for Pickup</string>
    <string name="dashboard_button_text_donor">Message</string>
    <string name="donation_complete_title">Thank you for your donation</string>
    <string name="donation_complete_message_head">Your generous donation of</string>
    <string name="and">and</string>
    <string name="donation_complete_message_tail">is complete.</string>
    <string name="done">done</string>
    <string name="rate_app">Rate app 5 stars</string>
    <string name="dashboard_empty_view">You haven\'t volunteered to pick up any requests yet.\nCheck out the Pickup Requests tab!</string>
    <string name="label_name">Your name</string>
    <string name="tab_title_donation_history">Donation History</string>
    <string name="tab_title_volunteer_history">Volunteer History</string>
    <string name="dialog_pickup_pickupRequest_title">Did you pick up this donation?</string>
    <string name="dialog_pickup_pickupRequest_message">This will notify the donor and remove it from your Dashboard.</string>
</resources>