<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="#ff7ba8ff"
    tools:context="org.onewarmcoat.onewarmcoat.app.fragments.main.PickupHistoryFragment">

    <LinearLayout
        android:id="@+id/pickupHeaders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/dateHdr"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/addrHdr"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemTypeHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/itypeHdr"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/cashValHdr"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/pickupHeaders"
        android:layout_marginBottom="5dp"
        android:background="@android:color/black" />

    <ListView
        android:id="@+id/pickups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickupHeaders" />
</RelativeLayout>

