<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:id="@+id/image"-->
        <!--android:paddingRight="16dp" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@null"
                android:src="@drawable/ic_arrow_backward_white_24px"
                android:visibility="invisible"/>

            <ViewSwitcher
                android:id="@+id/vsPhoneSMS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_phoneNumber_hint"
                    android:imeOptions="actionDone"
                    android:inputType="phone"/>

                <EditText
                    android:id="@+id/etSMSCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/dialog_sms_code_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="4"/>
            </ViewSwitcher>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"/>

                <ImageButton
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@color/colorAccent"
                    android:src="@drawable/ic_done_white_24px"
                    android:visibility="visible"/>
            </FrameLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/onboarding_or"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnAddPhoneNumberLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#55ffffff"
            android:text="@string/onboarding_add_phone_number_later_button"/>
    </LinearLayout>

    <TextView
        android:id="@+id/description2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp"/>
</LinearLayout><!-- From: file:/home/paolo/Development/AppIntro/library/src/main/res/layout/fragment_intro.xml -->