<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="0dp"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <TextView
        android:visibility="gone"
        android:id="@+id/title"
        android:text="@string/phone_number_verification_title"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@null"
            android:src="@drawable/ic_arrow_backward_white_24px"
            android:visibility="invisible"/>

        <ViewSwitcher
            android:id="@+id/vsPhoneSMS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right">

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_phoneNumber_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/darkBGTextHint"
                android:theme="@style/MyEditTextTheme"/>

            <EditText
                android:id="@+id/etSMSCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/dialog_sms_code_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/white"
                android:textColorHint="@color/darkBGTextHint"
                android:theme="@style/MyEditTextTheme"/>
        </ViewSwitcher>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>

            <ImageButton
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_done_white_24px"
                android:visibility="visible"/>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>